<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_music_height"
    android:layout_margin="@dimen/padding_tiny"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@android:color/transparent">

    <TextView
        android:id="@+id/tv_music_title"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        android:text="@string/music_title"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="@dimen/padding_small"
        app:layout_constraintEnd_toStartOf="@id/ic_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_artist_name"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:text="@string/artist_name"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/padding_small"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/secondary_text"
        app:layout_constraintEnd_toStartOf="@id/ic_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_music_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/ic_action"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/favourite"
        android:src="@drawable/ic_play"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginEnd="@dimen/padding_small"
        app:layout_constraintEnd_toStartOf="@id/ic_favourite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
        android:id="@+id/ic_favourite"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:contentDescription="@string/favourite"
        android:src="@drawable/ic_favorite"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>